--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,7 +39,7 @@ a {
     padding: 1.5rem 1rem;
     border-bottom: solid gray thin;
     align-items: center;
-    background-color: rgba(0,0,0,0.75);
+    background-color: #170e0e;
     position: fixed;
     width: 100%;
     ul{
@@ -56,7 +56,7 @@ a {
     position: fixed;
     width: 100%;
     z-index:2;
-    background-color: rgba(0,0,0);
+    background-color: #170e0e;
     .nav-container{
         display: flex;
         justify-content: space-between;
@@ -66,13 +66,13 @@ a {
     ul{
         display: flex;
         flex-direction: column;
-        background-color: rgba(0,0,0,0.5);
+        background-color: #170e0e;
         z-index: 3;
         li{
             width: 100%;
             text-align: center;
             padding: 1rem 0;
-            background-color:rgba(0, 0, 0, 0.205);
+            background-color:#170e0e;
             &:hover{
                 background-color: gray;
             }
@@ -264,7 +264,7 @@ main{
 
 // Footer
 footer{
-    background-color: darken(variables.$callToAction,6%);
+    background-color: #170e0e;
     padding: 3rem 0 0 0;
     .container{
         display:flex;
@@ -282,6 +282,9 @@ footer{
                 color:white;
                 font-size: 1.8rem;
                 margin-bottom: 1.5rem;
+                border-bottom: thin white solid;
+                padding: 0;
+                width: fit-content;
             }
 
             li{
@@ -419,4 +422,32 @@ footer{
             font-size: 4rem;
         }
     }
+
+    footer{
+        padding: 2rem 0 0 0;
+
+        .container{
+            align-items: flex-start;
+            flex-flow: column wrap;
+            margin: 0 2.5rem;
+            margin-bottom: 2rem;
+    
+            div{     
+                          
+                h6{
+                    font-size: 2rem;
+                    margin-bottom: 1rem;
+                    margin-top: 2rem;
+                }
+    
+                li{
+                    margin-bottom: 0.5rem;
+                    font-size: 1.8rem;
+                    
+                }
+    
+            }
+    
+        }
+    } 
 }
